# hermes-ag-shared

./: .clinerules  .gitignore  CLAUDE.md  brand_story_mimo.md  brand_story_v1.md  brand_story_v2.md  figma_api_helper.py  mimo_chat_log.md  search_api_rotation_guide.md  to-ag.md  to-hena.md  to-mimo-archive.md  to-mimo.md  독서연구소_AI_분석.md
drafts/: AI_에이전트_가이드북_출간기록_및_수익화_매뉴얼.md  book-front-matter.md  chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  guide1-book.epub  guide1-book.html  guide1-front-matter.md  guide2-book.epub  guide2-book.html  guide2-clean.md  guide2-collaboration-transcripts.md  guide2-dialogue-transcripts.html  guide2-front-matter.md  guide3-book.epub  guide3-book.html  guide3-chapter1.md  guide3-chapter2.md  guide3-chapter3.md  guide3-chapter4.md  guide3-chapter5.md  guide3-chapter6.md  guide3-chapter7.md  guide3-chapter8.md  guide3-chapter9.md  guide3-front-matter.md  guide3-toc.md  guide4_insane_search_story.md  guide4_open_design_story.md  guide5_dual_brain_synergy.md  master-lecture-schedule.md  morning-report-topic-game-industry.md  next_book_ideas.md  신규_강의계획서_AI_미디어_크리에이터.md  신규_월요AI강의_5-6주_강의계획서.md
mimos-house/src-tauri/: Cargo.toml  tauri.conf.json
mimos-house/src-tauri/src/: lib.rs
scripts/: api_tracker.py  build_all_books.py  build_book2.py  build_html_previews.py  clean_for_pandoc.py  compile_guide2.py  compile_guide2_markdown.py  copy_covers.py  crop_avatars.py  gen_cover2.py  mimo_proxy.py  mimo_tts_test.py  sanitize_names.py  start_mimo_qwen.py  sync.sh
templates/: clinerules.template  epub_style.css  강의_PPT_2강.md  (+9 more)
(+24 files in other folders)
